# uapmd

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  Doxyfile.docs  LICENSE  NEW_DIRECTORY_LAYOUT.md  README.md  build-ios-sim.sh  build-wasm-imgui.sh  build-wasm.sh  index.html  styles.css  vcpkg.json
examples/remidy-scan/: CMakeLists.txt  PluginInstancing.cpp  PluginInstancing.hpp  PluginScanner.cpp  PluginScanner.hpp  PluginScanning.cpp  PluginScanning.hpp  main.cpp
js/native/: CMakeLists.txt
js/native/include/: remidy_c.h
js/native/src/: remidy_c.cpp
source/c-api/: CMakeLists.txt
source/c-api/src/: uapmd-c-api.cpp  uapmd-c-app.cpp  uapmd-c-data.cpp  uapmd-c-engine.cpp
source/remidy/: CMakeLists.txt
source/remidy-tooling/: CMakeLists.txt
source/remidy-tooling/src/: CMakeLists.txt  PluginFormatManager.cpp  PluginInstancing.cpp  PluginScanTool.cpp  RemotePluginScannerProcess.cpp  ScanConstants.hpp  ScanOnlyRunner.cpp
source/remidy/src/: AndroidUiBridge.cpp  AndroidUiBridge.hpp  AudioProcessContext.cpp  CMakeLists.txt  EventLoop.cpp  EventLoopLinux.hpp  EventLoopX11.hpp  GenericAudioBuses.hpp  Logger.cpp  PluginBundlePool.cpp  PluginCatalog.cpp  PluginFormat.cpp  UmpInputDispatcher.cpp  common.cpp  utils.cpp  utils.hpp
source/tests/: CMakeLists.txt  SequencerEngineOutputTest.cpp  UapmdProjectFileTest.cpp
source/tools/: CMakeLists.txt
source/tools/remidy-imgui-shared/: CMakeLists.txt  ImGuiApp.hpp  ImGuiEventLoop.hpp  MidiKeyboard.hpp  PlatformBackend.cpp  PlatformBackend.hpp  PlatformBackend_GLFW.cpp  PlatformBackend_OpenGL.cpp  PlatformBackend_SDL2.cpp  PlatformBackend_SDL3.cpp  PlatformBackend_Win32.cpp  SharedTheme.hpp
source/tools/remidy-scan/: CMakeLists.txt  main.cpp
source/tools/uapmd-app/: AndroidAutomationBridge.cpp  AppModel.cpp  AppModel.hpp  CMakeLists.txt  Info-iOS.plist.in  ScanOnlyMode.cpp  ScanOnlyMode.hpp  UapmdJSRuntime.cpp  UapmdJSRuntime.hpp  android_main.cpp  ios_main.mm  main.cpp  main_common.cpp  main_common.hpp  uapmd_wasm.cpp  web_main.cpp  web_main_minimal.cpp
source/tools/uapmd-app-model/: CMakeLists.txt
source/tools/uapmd-apply/: CMakeLists.txt  main.cpp
source/tools/uapmd-scan/: CMakeLists.txt  main.cpp
source/tools/wclap-host/: CMakeLists.txt  WclapHost.cpp
source/uapmd-data/: CMakeLists.txt
source/uapmd-data/src/: CMakeLists.txt
source/uapmd-engine/: CMakeLists.txt
source/uapmd-engine/src/: CMakeLists.txt
source/uapmd-file/: CMakeLists.txt
source/uapmd-file/src/: CMakeLists.txt  DocumentProviderAndroid.cpp  DocumentProviderEmscripten.cpp  DocumentProviderIOS.mm
source/uapmd-graph/: CMakeLists.txt
source/uapmd-graph/src/: AudioGraphRegistry.cpp
source/uapmd-ipc/: CMakeLists.txt
source/uapmd-ipc/src/: EngineServer.cpp  RemoteEngineProxy.cpp  ThreadedEngineProxy.cpp
src/remidy/: AudioPluginFormat.cpp  AudioPluginFormatAU.hpp  AudioPluginFormatAU.mm  AudioPluginFormatLV2.cpp  AudioPluginFormatVST3.cpp  AudioPluginFormatVST3.hpp  CMakeLists.txt  EventLoop.cpp  EventLoopLinux.hpp  GenericAudioBuses.hpp  Logger.cpp  PluginBundlePool.cpp  PluginCatalog.cpp  PluginFormat.cpp  PluginFormatAU.hpp  PluginFormatAU.mm  PluginFormatLV2.cpp  PluginFormatLV2.hpp  PluginFormatVST3.cpp  PluginFormatVST3.hpp  README.md  UmpInputDispatcher.cpp  utils.cpp  utils.hpp
src/remidy-gui/: CMakeLists.txt  ContainerWindow_Android.cpp  ContainerWindow_Cocoa.mm  ContainerWindow_Emscripten.cpp  ContainerWindow_Win32.cpp  ContainerWindow_X11.cpp
src/remidy-tooling/: CMakeLists.txt  PluginInstancing.cpp  PluginScanTool.cpp  PluginScanning.cpp
src/remidy-tooling/src/: PluginInstancing.cpp
src/remidy-tooling/tests/: CMakeLists.txt  PluginScanToolTests.cpp
src/remidy/aap/: PluginFormatAAP.cpp  PluginFormatAAP.hpp  PluginInstanceAAP.Parameters.cpp  PluginInstanceAAP.cpp
src/remidy/au/: AUv2Helper.cpp  AUv2Helper.hpp  PluginFormatAU.hpp  PluginFormatAU.mm  PluginFormatAUv3.hpp  PluginFormatAUv3.mm  (+20 more)
src/service/: CMakeLists.txt  main.cpp
src/uapmd/: CMakeLists.txt
src/uapmd-data/: CMakeLists.txt
src/uapmd-engine/: CMakeLists.txt
src/uapmd-file/: CMakeLists.txt  DocumentProviderAndroid.cpp  DocumentProviderDesktop.cpp  DocumentProviderEmscripten.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/remidy-apply/: CMakeLists.txt  main.cpp
tools/remidy-imgui-shared/: CMakeLists.txt  ImGuiApp.hpp  ImGuiEventLoop.hpp  MidiKeyboard.cpp  PlatformBackend.cpp  PlatformBackend.hpp  PluginUIHelpers.hpp  SharedTheme.hpp
tools/remidy-plugin-host/: AppModel.cpp  AppModel.hpp  AudioDeviceSetup.cpp  AudioDeviceSetup.hpp  AudioPluginInstanceControl.cpp  AudioPluginInstanceControl.hpp  AudioPluginSelectors.cpp  AudioPluginSelectors.hpp  CMakeLists.txt  CMakeLists.txt.full  ImGuiEventLoop.hpp  SaucerWebEmbedded.hpp  SimpleAppModel.cpp  SimpleAppModel.hpp  WebViewProxy.hpp  main.cpp  simple_main.cpp  standalone_test.cpp
tools/remidy-plugin-host-web/: AppModel.hpp  CMakeLists.txt
tools/remidy-scan/: CMakeLists.txt  main.cpp
tools/remidy-tooling/: CMakeLists.txt  PluginScanning.cpp  PluginScanning.hpp
tools/uapmd-app/: AppModel.cpp  AppModel.hpp  CMakeLists.txt  DocumentProviderHelpers.hpp  Info.plist.in  UapmdJSRuntime.cpp  UapmdJSRuntime.hpp  android_main.cpp  main.cpp  main_common.cpp  uapmd_wasm_api.h  web_main.cpp
tools/uapmd-apply/: CMakeLists.txt  main.cpp
tools/uapmd-service/: CMakeLists.txt  main.cpp
web/: .gitignore  BUILD.md  BUILD_SUCCESS.md  CMakeLists.txt  PORTING_STATUS.md  README.md  SUCCESS.md  WASM_IMGUI_APPROACH.md  WASM_PORT_STATUS.md  app.js  build-clean.sh  build-full.sh  build-simple.sh  build-standalone.sh  build-wasm-imgui.sh  build-wasm.sh  index.html  package-lock.json  package.json  test-imgui.cpp  web_main.cpp  web_main_minimal.cpp
web/cmake/: CPM.cmake
web/src/: uapmd_api.h  uapmd_wasm.cpp
web/stubs/: AppModel.hpp  InstanceDetails.hpp  InstanceDetails_stub.hpp  ScriptEditor_stub.hpp  audio_stubs.cpp  cmidi2.h  midi_stubs.cpp  portable-file-dialogs.h  remidy_event_loop_stub.cpp  remidy_gui_stubs.cpp  remidy_logger_stub.cpp  sequencer_stubs.cpp
(+4032 files in other folders)
